# swagger/swagger.json
@@ -1454,11 +1454,11 @@
                 "Hipertension": {
                     "type": "string"
                 },
-                "IdAnamnesis": {
+                "HistoriaClinicaId": {
                     "type": "integer",
                     "format": "int64"
                 },
-                "IdHistoriaClinica": {
+                "Id": {
                     "type": "integer",
                     "format": "int64"
                 },
@@ -1491,14 +1491,15 @@
                     "type": "string",
                     "format": "datetime"
                 },
-                "IdHojaHistoria": {
+                "HistoriaClinicaId": {
                     "type": "integer",
                     "format": "int64"
                 },
-                "IdTipoOdontograma": {
-                    "$ref": "#/definitions/models.TipoOdontograma"
+                "HojaHistoriaId": {
+                    "type": "integer",
+                    "format": "int64"
                 },
-                "IdcontrolPlaca": {
+                "Id": {
                     "type": "integer",
                     "format": "int64"
                 },
@@ -1512,6 +1513,9 @@
                 },
                 "Observaciones": {
                     "type": "string"
+                },
+                "TipoOdontograma": {
+                    "$ref": "#/definitions/models.TipoOdontograma"
                 },
                 "Vestibulares": {
                     "type": "string"
@@ -1528,11 +1532,15 @@
                 "Evolucion": {
                     "type": "string"
                 },
-                "IdDiagnostico": {
+                "HistoriaClinica": {
                     "type": "integer",
                     "format": "int64"
                 },
-                "IdHojaHistoria": {
+                "HojaHistoriaId": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "Id": {
                     "type": "integer",
                     "format": "int64"
                 },
@@ -1551,11 +1559,15 @@
                 "Abrasion": {
                     "type": "string"
                 },
-                "IdExamenDental": {
+                "HistoriaClinicaId": {
                     "type": "integer",
                     "format": "int64"
                 },
-                "IdHojaHistoria": {
+                "HojaHistoriaId": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "Id": {
                     "type": "integer",
                     "format": "int64"
                 },
@@ -1598,11 +1610,15 @@
                 "GlandulasSalivares": {
                     "type": "string"
                 },
-                "IdExamenEstomatologico": {
+                "HistoriaClinicaId": {
                     "type": "integer",
                     "format": "int64"
                 },
-                "IdHojaHistoria": {
+                "HojaHistoriaId": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "Id": {
                     "type": "integer",
                     "format": "int64"
                 },
@@ -1651,11 +1667,15 @@
                 "Coagulacion": {
                     "type": "string"
                 },
-                "IdExamenesComplementarios": {
+                "HistoriaClinicaId": {
                     "type": "integer",
                     "format": "int64"
                 },
-                "IdHojaHistoria": {
+                "HojaHistoriaId": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "Id": {
                     "type": "integer",
                     "format": "int64"
                 },
@@ -1675,6 +1695,10 @@
                     "format": "int64"
                 },
                 "OtraInicio": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "PanoramicaFinal": {
                     "type": "integer",
                     "format": "int64"
                 },
@@ -1708,11 +1732,15 @@
                 "Diagrama": {
                     "type": "string"
                 },
-                "IdHojaHistoria": {
+                "HistoriaClinicaId": {
                     "type": "integer",
                     "format": "int64"
                 },
-                "IdOdontograma": {
+                "Id": {
+                    "type": "integer",
+                    "format": "int64"
+                },
+                "IdHojaHistoria": {
                     "type": "integer",
                     "format": "int64"
                 },
@@ -1732,6 +1760,9 @@
             "title": "TipoOdontograma",
             "type": "object",
             "properties": {
+                "Activo": {
+                    "type": "boolean"
+                },
                 "Descripcion": {
                     "type": "string"
                 },
@@ -1743,7 +1774,7 @@
                     "type": "string",
                     "format": "datetime"
                 },
-                "IdTipoOdontograma": {
+                "Id": {
                     "type": "integer",
                     "format": "int64"
                 },
